# Multi-robot-dispatch-platform

./: README.md  cyclonedds.xml
client_ws/src/free_fleet/free_fleet_client_ros1/src/: ClientNode_modified.cpp
server_ws/src/demonstrations/rmf_demos/rmf_demos/config/hospital/: tinyRobot_config.yaml
server_ws/src/demonstrations/rmf_demos/rmf_demos/launch/: hospital.launch.xml  house.launch.xml  imr.launch.xml  world.launch.xml
server_ws/src/demonstrations/rmf_demos/rmf_demos_bridges/rmf_demos_bridges/: fleet_robotmanager_mqtt_bridge.py  fleet_socketio_bridge.py
server_ws/src/demonstrations/rmf_demos/rmf_demos_dashboard_resources/: CMakeLists.txt
server_ws/src/demonstrations/rmf_demos/rmf_demos_dashboard_resources/hospital/: dashboard_config.json
server_ws/src/demonstrations/rmf_demos/rmf_demos_dashboard_resources/house/: dashboard_config.json
server_ws/src/demonstrations/rmf_demos/rmf_demos_dashboard_resources/imr/: dashboard_config.json
server_ws/src/demonstrations/rmf_demos/rmf_demos_dashboard_resources/world/: dashboard_config.json
server_ws/src/demonstrations/rmf_demos/rmf_demos_fleet_adapter/rmf_demos_fleet_adapter_multi_coor/: RobotCommandHandle.py  fleet_adapter.py  fleet_manager.py
server_ws/src/demonstrations/rmf_demos/rmf_demos_fleet_adapter/rmf_demos_fleet_adapter_wheelchair/: RobotClientAPI.py  RobotCommandHandle.py  fleet_adapter.py  fleet_manager.py
server_ws/src/demonstrations/rmf_demos/rmf_demos_gz_classic/launch/: hospital.launch.xml
server_ws/src/demonstrations/rmf_demos/rmf_demos_panel/task_lists/: hospital_tasks.json
server_ws/src/demonstrations/rmf_demos/rmf_demos_tasks/rmf_demos_tasks/: mock_docker.py
server_ws/src/free_fleet/ff_examples_ros2/: package.xml
server_ws/src/free_fleet/ff_examples_ros2/launch/: fake_server.launch.xml  turtlebot3_world_ff_server.launch.xml
server_ws/src/rmf/ament_cmake_catch2/: README.md
server_ws/src/rmf/rmf_api_msgs/: README.md
server_ws/src/rmf/rmf_api_msgs/.internal_tools/: Cargo.toml  README.md
server_ws/src/rmf/rmf_api_msgs/.internal_tools/check_samples/: Cargo.toml
server_ws/src/rmf/rmf_api_msgs/.internal_tools/check_schemas/: Cargo.toml
server_ws/src/rmf/rmf_api_msgs/.internal_tools/configure_validator/: Cargo.toml
server_ws/src/rmf/rmf_api_msgs/rmf_api_msgs/: CHANGELOG.md  CMakeLists.txt  package.json  package.xml
server_ws/src/rmf/rmf_api_msgs/rmf_api_msgs/cmake/: rmf_api_generate_schema_headers.cmake  rmf_api_msgs-config.cmake.in  schemas_template.hpp.in
server_ws/src/rmf/rmf_api_msgs/rmf_api_msgs/rmf_api_msgs/: schemas.py
server_ws/src/rmf/rmf_api_msgs/rmf_api_msgs/rmf_api_msgs/models/: activity_discovery_request.py  activity_discovery_response.py  cancel_task_request.py  cancel_task_response.py  dispatch_task_request.py  dispatch_task_response.py  error.py  fleet_log.py  fleet_log_request.py  fleet_log_response.py  fleet_log_update.py  fleet_state.py  fleet_state_update.py  interrupt_task_request.py  interrupt_task_response.py  kill_task_request.py  kill_task_response.py  log_entry.py  resume_task_request.py  resume_task_response.py  rewind_task_request.py  rewind_task_response.py  robot_state.py  robot_task_request.py  robot_task_response.py  rtls_tag_state.py  simple_response.py  skip_phase_request.py  skip_phase_response.py  task_discovery_request.py  task_discovery_response.py  task_log.py  task_log_request.py  task_log_response.py  task_log_update.py  task_request.py  task_state.py  task_state_update.py  token_response.py  undo_skip_phase_request.py  (+1 more)
server_ws/src/rmf/rmf_api_msgs/rmf_api_msgs/samples/task_log/: multi_dropoff_delivery.json
server_ws/src/rmf/rmf_api_msgs/rmf_api_msgs/samples/task_state/: multi_dropoff_delivery.json
server_ws/src/rmf/rmf_api_msgs/rmf_api_msgs/schemas/: activity_discovery_request.json  activity_discovery_response.json  cancel_task_request.json  cancel_task_response.json  dispatch_task_request.json  dispatch_task_response.json  error.json  fleet_log.json  fleet_log_request.json  fleet_log_response.json  fleet_log_update.json  fleet_state.json  fleet_state_update.json  interrupt_task_request.json  interrupt_task_response.json  kill_task_request.json  kill_task_response.json  location_2D.json  log_entry.json  resume_task_request.json  resume_task_response.json  rewind_task_request.json  rewind_task_response.json  robot_state.json  robot_task_request.json  robot_task_response.json  rtls_tag_state.json  simple_response.json  skip_phase_request.json  skip_phase_response.json  task_discovery_request.json  task_discovery_response.json  task_log.json  task_log_request.json  task_log_response.json  task_log_update.json  task_request.json  task_state.json  task_state_update.json  token_response.json  (+3 more)
server_ws/src/rmf/rmf_api_msgs/rmf_api_msgs/scripts/: check_sample.py  generate_py_schemas.py  schemas_template.jinja2
server_ws/src/rmf/rmf_building_map_msgs/: README.md
server_ws/src/rmf/rmf_building_map_msgs/rmf_building_map_msgs/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
server_ws/src/rmf/rmf_ros2/rmf_fleet_adapter_python/scripts/: test_loop.py
server_ws/src/rmf/rmf_simulation/rmf_building_sim_gz_classic_plugins/src/: door.cpp  lift.cpp
server_ws/src/rmf/rmf_simulation/rmf_robot_sim_gz_classic_plugins/src/: TeleportDispenser.cpp  TeleportIngestor.cpp  readonly.cpp  slotcar.cpp
server_ws/src/rmf/rmf_utils/: README.md  codecov.yml
server_ws/src/rmf/rmf_utils/docs/: Doxyfile  conf.py  index.rst
server_ws/src/rmf/rmf_utils/rmf_utils/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  colcon.pkg  package.xml
server_ws/src/rmf/rmf_utils/rmf_utils/include/rmf_utils/: AssignID.hpp  Modular.hpp  RateLimiter.hpp  clone_ptr.hpp  impl_ptr.hpp  math.hpp  optional.hpp
server_ws/src/rmf/rmf_utils/rmf_utils/src/rmf_utils/: RateLimiter.cpp
server_ws/src/rmf/rmf_utils/rmf_utils/test/: main.cpp
server_ws/src/rmf/rmf_utils/rmf_utils/test/unit/: TestClass.cpp  TestClass.hpp  test_impl_ptr.cpp
server_ws/src/rmf/rmf_visualization_msgs/rmf_visualization_msgs/: CHANGELOG.md  CMakeLists.txt  package.xml
(+17 files in other folders)
