<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_utils</name>
  <version>1.4.0</version>
  <description>Simple C++ programming utilities used by Robotics Middleware Framework packages</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache License 2.0</license>
  <author>Grey</author>

  <build_depend>cmake</build_depend>

  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
